--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
+certifi==2022.12.7
+charset-normalizer==3.0.1
+idna==3.4
+influxdb-client==1.35.0
+msgpack==1.0.4
 numpy==1.24.1
 pandas==1.5.3
 python-dateutil==2.8.2
 pytz==2022.7.1
+reactivex==4.0.4
+requests==2.28.2
 six==1.16.0
+typing_extensions==4.4.0
+urllib3==1.26.14
+XlsxWriter==3.0.7
